<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_txt">This is sample news text This is sample news text This is sample news text This is sample news text</string>
    <string name="sports">sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="general">General</string>
    <string name="today_s_news">Today\'s News</string>
    <string name="top_news">Top News</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="source_of_news">Source of news</string>
    <string name="search_news">Search news</string>
</resources>