<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainModel"
            type="com.example.newsapp.viewmodel.MainViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        tools:context=".fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frank_ruhl_libre_medium"
                android:text="@string/top_news"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_news_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/frank_ruhl_libre_medium"
                android:text="@string/today_s_news"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip0"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="@{()->mainModel.updateOption(@string/general)}"
                        android:paddingStart="5dp"
                        android:text="@string/general" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/sports)}"
                        android:paddingLeft="5dp"
                        android:text="@string/sports" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/entertainment)}"
                        android:text="@string/entertainment" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/business)}"
                        android:text="@string/business" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip4"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/technology)}"
                        android:text="@string/technology" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip5"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/health)}"
                        android:text="@string/health" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip6"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->mainModel.updateOption(@string/science)}"
                        android:text="@string/science" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_news_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:nestedScrollingEnabled="false"
                android:padding="5dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>